# villani-ops

./: .gitignore  README.md  pyproject.toml
scripts/: apply_villani_ops_result.py
villani_ops/: __init__.py  git_ops.py  materialize.py
villani_ops/agentic/: __init__.py  artifacts.py  client.py  event_recorder.py  events.py  git_artifacts.py  progress.py  prompts.py  recovery.py  runner.py  state.py  state_tooling.py  tools.py  tournament.py  validation.py
villani_ops/classification/: __init__.py  classifier.py  context.py  prompts.py
villani_ops/cli/: main.py
villani_ops/controller/: executor.py  human_approval.py  kill_switch.py  progress.py  selector.py  state_machine.py
villani_ops/core/: acceptance.py  attempt.py  backend.py  concurrency.py  decision.py  durable_io.py  policy.py  pricing.py  task.py
villani_ops/cost_policy/: __init__.py  executor.py
villani_ops/execution_policies/: __init__.py  balanced.py  base.py  cheap.py  performance.py  quality.py
villani_ops/git/: generated.py
villani_ops/isolation/: base.py  copy.py  copy_git.py  worktree.py
villani_ops/llm/: __init__.py  client.py  json_extract.py  prompts.py  schema.py
villani_ops/orchestration/: __init__.py  artifacts.py  context.py  engine.py  graph.py  nodes.py  planner.py  progress.py  scheduler.py
villani_ops/orchestrator/: selection.py  verifier_parallel.py  verifier_sequential.py
villani_ops/performance/: __init__.py  backend_selection.py  investigator.py  models.py  prompts.py  report.py  selector.py
villani_ops/policy_engine/: __init__.py  defaults.py  engine.py  (+2 more)
(+138 files in other folders)
